<resources>
    <string name="app_name">Capturing the Past</string>
    <string name="bundle_ref">Catalogue Reference</string>
    <string name="ref_text">.jpg</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="repo">Repo#</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_camera">&#xF030;</string>
    <string name="fa_files">&#xF07C;</string>
    <string name="uf013">&#xF013;</string>
    <string name="fa_info">&#xF129;</string>
    <string name="fa_clear">&#xF00D;</string>
    <string name="action_settings">Settings</string>
    <string name="add_items_to_the_repository_list">Add items to the repository list</string>
    <string name="remove_items_or_reset_the_repository_list">Manage the repository list</string>
    <string name="preview_of_the_current_catalogue_number">Preview of the current catalogue number</string>
    <string name="launch_the_camera">Launch the camera</string>
    <string name="open_the_file_manager">Open the file manager</string>
    <string name="show_the_information_panel">Show the information panel</string>
    <string name="repository">Current archive:</string>
    <string name="catalogue_reference">Reference of archival record:</string>
    <string name="reference_preview">Reference number preview</string>
    <string name="description_optional_saved_in_the_capture_log">Description</string>
    <string name="detached_or_torn_parts_special_cases">Special Cases</string>
    <string name="sub_item_e_g_pages_of_the_document">Sub Item</string>
    <string name="item_number">Item</string>
    <string name="note">Note</string>
    <string name="e_g_par378_31_3_5">E.g. PAR378/31/3/5</string>
    <string name="delete_selected_repository">Delete selected repository</string>
    <string name="alternative">Alternative</string>
    <string name="short_repo_list">Short</string>
    <string name="default_repo_list">Default</string>
    <string name="include_timestamp">Include timestamp in filename</string>
    <string name="prefix">Project prefix</string>
    <string name="enter_the_catalogue_number">Enter the catalogue number</string>
    <string name="heading_edit_archive"><![CDATA[<H2>Edit Archive</H2>]]></string>
    <string name="heading_delete_archive"><![CDATA[<H2>Delete Archive</H2>]]></string>
    <string name="delete_archive_warning"><![CDATA[Do you really want to delete this archive?]]></string>
    <string name="latest_captures_message">Latest photos captured (Most recent first):\n</string>
    <string name="add_repo_heading"><![CDATA[<H2>Add Archive</H2>]]></string>
    <string name="full_archive_name_label">Full name</string>
    <string name="full_archive_name_hint">E.g. Bundesarchiv</string>
    <string name="short_archive_name_label"><![CDATA[Short form <br />(as you would cite this archive)]]></string>
    <string name="short_archive_name_hint">E.g. BArch</string>
    <string name="ref_description_text">
        <![CDATA[Enter the catalogue number to associate photos with a specific document in a catalogue.<br /> <br />When working with sequences such as entire collections it may be convenient to use the optional controls below to increment the final levels of the catalogue reference. E.g. books or letters. Non sequential entry of reference numbers may be easier using a single text field. <br /> <br />The character limit for filenames is accumulated across all input fields though is not restricted as you may have a valid reason for creating filenames that do not work in common file systems. Instead a warning message is shown when 128 characters is exceeded, this would be a really long file name. Actual limits vary for according to file system, but 255 characters is likely to work.]]></string>
    <string name="ref_description_heading">Catalogue Reference</string>
    <string name="item_descript_text">Optional - The incrementing and decrementing buttons are intended to help with
        sequential capture tasks such as working through a series or collection. The input is restricted to numeric
        values
    </string>
    <string name="item_description_heading">Item Level</string>
    <string name="sub_item_description_text">
        <![CDATA[Optional - The sub item is intended to  be used to associate photos with specific parts of an item. E.g. The individual pages of books or letters. \n\n<br /><br />File names include a time stamp to enable unlimited numbers of photos for any reference number. <br /><br />The sub item level is often used by projects to provide an additional level of catalogue description beyond the institutions catalogue numbering.]]></string>
    <string name="sub_item_description_heading">Sub Item Level</string>
    <string name="detached_description_text">Optional - this control is intended to be reserved for special cases such
        as detached or torn document parts. The control adds a distinguishable identifier to the end of the reference
        using a combination of letters and numbers.
    </string>
    <string name="detached_description_heading">Special Cases</string>
    <string name="notes_information">
        <![CDATA[<h3>Your Notes</h3><p>Your notes are saved with the photo names in CapturingThePast.csv in the Documents folder on your phone.</p>]]> </string>
    <string name="info_heading"><![CDATA[<h2>Information</h2>]]></string>
    <string name="further_information">
        <![CDATA[<h3>Further Information</h3><a href=https://capturingthepast.benskitchen.com/ >Software Documentation</a><br /><p><a href=https://blogs.sussex.ac.uk/capturing-the-past/about-us/ >Research Project</a></p><p>Capturing the Past is a <a href=https://www.sussex.ac.uk/research/centres/sussex-humanities-lab/ >Sussex Humanities Lab</a> project funded by the <a href=https://ahrc.ukri.org/ >Arts and Humanities Research Council</a>.</p>]]></string>
    <string name="counter_label"><![CDATA[<h3>Photos captured</h3>]]></string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="deleted">Deleted</string>
    <string name="next_photo_name">File name for the next photo:</string>
    <string name="photo_counter_label">Photos taken for this archival record: 0</string>
    <string name="notes_label">Notes for next photo:</string>
    <string name="input_warning_heading"><![CDATA[<H2>Wrong Input Format</H2>]]></string>
    <string name="input_warning_text">
        <![CDATA[<p>1. Make sure to choose an archive.<br /><br />2. Separate hierarchy levels in archival records with \'_\' or \'/\'. Other separators cannot be used.<p>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_fragment_title">About</string>
    <string name="about_fragment_text"><![CDATA[<p>This app is a revised version of Capturing the Past. This app was originally developed in a <a href=https://blogs.sussex.ac.uk/capturing-the-past/about-us/ >research project</a> at the <a href=https://www.sussex.ac.uk/research/centres/sussex-humanities-lab/ >Sussex Humanities Lab</a>. The original project was funded by the <a href=https://ahrc.ukri.org/ >Arts and Humanities Research Council</a>.</p>]]></string>
    <string name="help_fragment_title">Help</string>
    <string name="help_fragment_text"><![CDATA[<a href=https://capturingthepast.benskitchen.com/ >Software Documentation</a>]]></string>
    <string name="help_fragment_acc_title_1">Add and Select Archive</string>
    <string name="help_fragment_acc_body_1_text"><![CDATA[<p>- Enter the full archive name and the short form as you would cite the archive.</p><p>- The short form will be part of the photo name:</p><p><b><u>BArch</u></b>_DQ1_14614_1.jpg</p>]]></string>
    <string name="help_fragment_acc_title_2">Add record information</string>
    <string name="help_fragment_acc_body_2_text"><![CDATA[<p>- Enter the reference for the next record to photograph.</p><p>- The reference will be part of the photo name:</p><p>BArch_<b><u>DQ1</u>_<u>14614</u></b>_<b><u>1</u></b>.jpg</p><p>- The photo name ends with a counter. It increases as you take photos of the record.</p>]]></string>
    <string name="help_fragment_acc_title_3">Define folder structure via record name</string>
    <string name="help_fragment_acc_body_3_text"><![CDATA[<p>- Add hierarchy levels using \"_\" or \"/\" in the record reference.</p><p>- BArch<b><u>_</u></b>DQ1<b><u>_</u></b>14614<b><u>_</u></b>1.jpg will result in:</p>]]></string>
    <string name="help_fragment_acc_title_4">Take notes and photos</string>
    <string name="help_fragment_acc_body_4_text"><![CDATA[<p>- Take notes for the next photo you take.</p><p>- Press \"Take photo\" to open the camera.</p><p>- Saving the photo automatically saves your notes.</p><p>- Find your photos and notes in the menu (☰).</p>]]></string>
    <string name="help_fragment_acc_title_5">Use notes and photos on your computer</string>
    <string name="help_fragment_acc_body_5_text"><![CDATA[<p>- You\'re done in the archive? Connect your phone to your computer.</p><p>- Access your phone\'s file system on your computer.</p><p>- Photos: > Pictures > cPast.</p><p>- Notes: > Documents > cPast.</p>]]></string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="diamond">◆</string>
</resources>